--- a/scrowl/manifest.json
+++ b/scrowl/manifest.json
@@ -1,10 +1,10 @@
 { 
 
-  "name": "WebsiteName", 
+  "name": "SHADES", 
 
-  "short_name": "WebName", 
+  "short_name": "SHADES", 
 
-  "start_url": "https://DomainName", 
+  "start_url": "https://kahrzdn.github.io/scrowl/shades.html", 
 
   "display": "standalone", 
 
